Fix a layout issue on small screens
The cover/title were too close together

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -263,6 +263,7 @@ hr {
 @media screen and (max-width: 500px) {
   .review_preview a {
     grid-template-columns: auto;
+    grid-row-gap: 1.75em;
   }
 
   .review_preview img {
